--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -1,20 +1,3 @@
-#holder {
-    position: absolute;
-    left: 15px;
-    top: 15px;
-
-    width: 300px;
-    height: 300px;
-
-    border: 10px dashed #fc0;
-}
-
-#holder.hover {
-    border: 10px dashed #f00;
-}
-
-#holder h1 {
-    margin-top: 120px;
-    margin-left: 15px;
-    font-family: Arial;
+body {
+    background-color: white;
 }
