Use a subset of a piano.

--- a/stylesheets/piano.css
+++ b/stylesheets/piano.css
@@ -15,3 +15,11 @@ path {
     stroke: none;
     fill: white;
 }
+
+.black-key.active {
+    fill: yellow;
+}
+
+.white-key.active {
+    fill: red;
+}
